# tiny_compiler

./: .gitignore  Ava.cpp  Ava.h  CMakeLists.txt  Lexical_Analysiser.cpp  Lexical_Analysiser.h  Num_Checker.cpp  Num_Checker.h  Num_Checker_LL1.cpp  Num_Checker_LL1.h  Prex.cpp  Prex.h  Quta.h  README.md  Reg.cpp  Reg.h  Store.cpp  Store.h  StoreTest.cpp  Tack.cpp  Tack.h  lexical_analysis.cpp  lexical_analysis.h  main.cpp
